--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "homepageramla",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.9.1"
+  },
   "description": "Página principal Ramla Software",
   "main": "index.js",
   "scripts": {
