--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "homepageramla",
   "version": "1.0.0",
   "engines": {
-    "node": "8.9.1"
+    "node": "8.9.1",
+    "npm": "5.5.x"
   },
   "description": "Página principal Ramla Software",
   "main": "index.js",
