CHANGE MOCA, POSTINSTALL, HEROKU PREBUILD

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "description": "Página principal Ramla Software",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "mocha",
+    "postinstall": "bower install && grunt build",
+    "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
+    "heroku-postbuild": "echo This runs afterwards."
   },
   "repository": {
     "type": "git",
