--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "homepage": "https://github.com/RamlaSoftware/HomePageRamla#readme",
   "dependencies": {
+    "bower": "^1.8.2",
     "express": "^4.14.0"
   },
   "devDependencies": {
