--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "engines": {
     "node": "8.9.1",
-    "npm": "5.5.x"
+    "npm": "5.5.x",
+    "bower": "1.8.2"
   },
   "description": "Página principal Ramla Software",
   "main": "index.js",
