--- a/package.json
+++ b/package.json
@@ -1,46 +1,36 @@
 {
-  "name": "homepageramla",
+  "name": "corporateproject",
   "version": "1.0.0",
   "engines": {
-    "node": "8.9.1",
-    "npm": "5.5.x",
-    "bower": "1.8.2"
+    "node": "8.9.1"
   },
-  "description": "Página principal Ramla Software",
+  "description": "Presentación sobre los servicios de Ramla Software",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "mocha",
-    "postinstall": "bower install && grunt build",
-    "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
-    "heroku-postbuild": "echo This runs afterwards."
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RamlaSoftware/HomePageRamla.git"
+    "url": "git+https://github.com/cfrancobedoya/CorporateProject.git"
   },
   "keywords": [
     "Ramla",
     "Software",
-    "ramla",
-    "software",
-    "desarrollo",
-    "diseño",
+    "app",
     "web",
-    "móvil",
-    "aplicaciones",
-    "aplicación"
+    "desarrollo"
   ],
-  "author": "Ramla Software",
+  "author": "Cristian Franco Bedoya",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/RamlaSoftware/HomePageRamla/issues"
+    "url": "https://github.com/cfrancobedoya/CorporateProject/issues"
   },
-  "homepage": "https://github.com/RamlaSoftware/HomePageRamla#readme",
+  "homepage": "https://github.com/cfrancobedoya/CorporateProject#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.16.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.12.1"
   }
 }
