--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cfrancobedoya/CorporateProject.git"
+    "url": "git+https://github.com/RamlaSoftware/HomePageRamla.git/"
   },
   "keywords": [
     "Ramla",
